# bsbgateway

./: .gitignore  README.md  broetje_isr_plus.json  broetje_logger  bsb-types.json  bsbgateway.sh  config.py  prepare_datafiles.sh  pyproject.toml  requirements.txt  test-filter.sh  test-merge.sh
bsbgateway/: __init__.py  bsb_gateway.py  cmd_interface.py  email_action.py  event_sources.py  fake_serial_source.py  network_source.py  serial_source.py  single_field_logger.py  virtual_device.py  virtual_serial.py
bsbgateway/bsb/: broetje_isr_plus.py  bsb_comm.py  bsb_field.py  bsb_field_to_model.py  bsb_fields.py  bsb_telegram.py  crc16pure.py  errors.py  model.py  model_filter.py  model_merge.py  payload_decode.py  xml_device.py
bsbgateway/tools/: bsb_field_to_model.py  extract_types.py
bsbgateway/util/: decorator.py  jos_parser.py  webutils.py
bsbgateway/web_interface/: __init__.py  __main__.py  base.html  field.html  field.py  field_dashwidget.html  field_widget.html  group.html  group.py  index.html  index.py  templates.py  webutils.py
doc/: broetje_interface.sch  bsb-types.txt  cmdline.md  hardware.md  logging.md  notes.txt  protocol.md  web.md
src/bsbgateway/bsb/: model.py  model_merge.py
static/: main.css  main.js
tests/: test_bsb_json_device.py  test_bsb_model.py  test_config_reader.py  test_payload_decode.py  test_throttle.py
trace/: load_trace.py
