[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "BsbGateway"
version = "1.1.0"
description = "Read and write data on a BSB (Boiler System Bus)"
authors = [{name = "Johannes Loehnert", email = "loehnert.kde@gmx.de"}]
license = "LGPL-3.0-or-later AND Apache-2.0"
license-files = ["LICENSE", "modules/ha-mqtt-device/LICENSE"]
readme = "README.md"
homepage = "https://github.com/loehnertj/bsbgateway"
repository = "https://github.com/loehnertj/bsbgateway"
documentation = "https://github.com/loehnertj/bsbgateway"
keywords = ["BSB", "heating", "boiler", "IoT", "home-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"

packages = [
    { include = "bsbgateway", from = "src" }
]

# Include HTML templates and static files
include = [
    { path = "src/bsbgateway/bsb/*.json" },
    { path = "src/bsbgateway/web_interface/*.html" },
    { path = "src/bsbgateway/web_interface/static" },
]
dependencies = [
    "pyserial",
    "Flask",
    "attrs",
    "cattrs (>=24.1.0)",
    "quickrpc",
    # ha-mqtt-device (fork of ha-mqtt-discoverable) is vendored (see packages= below).
    # Thus, we need to copy its dependencies here.
    "paho-mqtt==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.scripts]
bsbgateway = "bsbgateway.__main__:main"

[tool.hatch.build.targets.wheel]
# Tell Hatch which package directories to include in the built wheel.
# The `packages` entries are paths (relative to the project root) to the package dirs.
packages = [
    "src/bsbgateway",
    "modules/ha-mqtt-device/ha_mqtt_device",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
